sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:2: error: not found: type int
def bubbleSort(tab: Array[int]) = {
                          ^AlgBubbleSort1:7: error: method bubbleSort has return statement; needs result type
    return true;
    ^